--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,295 @@
 	top: 0px;
 	left: 0px;
 	position: absolute;
+	float: left;
+	background-color: #fff;
 	border-right-style: solid;
 	border-right-width: 1px;
 	border-right-color: #7f7f7f;
+	z-index: 20;
 }
+
+.contentView {
+	width: 1024px;
+	height: 100%;
+	top: 0px;
+	left: -240px;
+	background-color: #fff;
+	position: absolute;
+	border-right-style: solid;
+	border-right-width: 1px;
+	border-right-color: #7f7f7f;
+	z-index: 10;
+	-webkit-transition: left 1s;
+}
+
+.contentView.active {
+	left: 784px;
+}
+
+img {
+	width: 100%;
+	margin-top: 60px;
+	margin-bottom: 60px;
+}
+
+/* ------------------------------------------
+-- KARTE ALSO MAP ---------------------------
+------------------------------------------ */
+
+#mapElement {
+	background: silver;
+	width: 1012px;
+	height: 860px;
+	top:250px;
+	left:900px;
+	position: fixed;
+	/*-webkit-transition: -webkit-transform 0.2s;
+	-webkit-transition: -webkit-transform-origin 0.2s;*/
+	background-image: url(../img/maps/map_0.png);
+	background-size: 100%;
+}
+
+/* ------------------------------------------
+-- TYPOGRAPHY -------------------------------
+------------------------------------------ */
+
+@font-face {
+  font-family: 'Univers';
+  src: url('../font/UniversLTStd.otf') format('opentype');
+}
+
+h1 {
+	font-family: 'Univers';
+	font-size: 35px;
+	font-weight: 500;
+}
+
+h2 {
+	font-family: 'Univers';
+	font-size: 35px;
+	font-weight: 700;
+	line-height: 50px;
+	margin-bottom: 60px;
+}
+
+p {
+	font-family: 'Univers';
+	font-size: 35px;
+	font-weight: 300;
+	line-height: 50px;
+}
+
+.bold {
+	font-weight: 900;
+}
+
+.horiCenter {
+	text-align: center;
+}
+
+/* ------------------------------------------
+-- COLORS -----------------------------------
+------------------------------------------ */
+
+.pgColor {
+	color: #1c93a7;
+}
+
+.igColor {
+	color: #a9bd38;
+}
+
+.kgColor {
+	color: #e48e13;
+}
+
+.iotColor {
+	color: #283178;
+}
+
+.sgColor {
+	color: #b548b1;
+}
+
+
+/* ------------------------------------------
+-- SIDEBAR ----------------------------------
+------------------------------------------ */
+
+/* general */
+
+.sidebarContent {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	left: 0px;
+	overflow: hidden;
+}
+
+.programsContent {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	left: -784px;
+	background-color: #fff;
+	-webkit-transition: left 1s;
+}
+
+.servicesContent {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	left: 784px;
+	background-color: #fff;
+	-webkit-transition: left 1s;
+}
+
+.programsContent.active {
+	left: 0px;
+}
+
+.servicesContent.active {
+	left: 0px;
+}
+
+/* top */
+
+.topIndicator {
+	width: 100%;
+	height: 146px;
+	top: 0px;
+	left: 0px;
+	border-bottom-style: solid;
+	border-bottom-width: 1px;
+	border-bottom-color: #7f7f7f;
+}
+
+.contentIndicator {
+	float: left;
+	width: 50%;
+}
+
+.vertIndicatorCenter {
+	margin-top: 70px;
+}
+
+
+/* cells */
+
+.programCell {
+	width: 100%;
+	height: 189px;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
+.programLabel {
+	width: 178px;
+	height: 100%;
+	float: left;
+}
+
+.programTitle {
+	width: 605px;
+	height: 100%;
+	float: left;
+	border-bottom-style: solid;
+	border-bottom-width: 1px;
+	border-bottom-color: #7f7f7f;
+}
+
+.programTitle.active {
+	border-bottom-style: none;
+}
+
+.programCell.active {
+	background-color: #eee;
+}
+
+.vertCellCenter {
+	margin-top: 80px;
+}
+
+.floatLeft {
+	float: left;
+}
+
+.chevron {
+	width: 100px;
+	height: 100px;
+	background-image: url(../img/icons/chevron.png);
+	margin-left: 500px;
+	margin-top: 40px;
+	display: none;
+}
+
+/* ------------------------------------------
+-- CONTENT-VIEW -----------------------------
+------------------------------------------ */
+
+.semesterSelector {
+	width: 120px;
+	height: 840px;
+	margin-top: 768px;
+	float: left;
+}
+
+.semesterClick {
+	width: 120px;
+	height: 120px;
+	padding-top: 50px;
+	color: #aaa;
+}
+
+.semesterClick.active {
+	color: #000;
+}
+
+.semesterContentView {
+	width: 904px;
+	margin-left: 120px;
+	height: 100%;
+}
+
+.fixedTitle {
+	position: fixed;
+	width: 903px;
+	padding-bottom: 60px;
+	background-color: #fff;
+}
+
+.fixedTitle > .programLabel {
+	margin-top: 60px;
+	width: 120px;
+}
+
+.fixedTitle > .programTitle {
+	margin-top: 60px;
+	border-bottom-style: none;
+}
+
+.semesterContentFrame {
+	width: 100%;
+	height: 100%;
+	float: left;
+	overflow-y: scroll;
+}
+
+.semesterContent {
+	width: 664px;
+	margin-top: 160px;
+	margin-left: 120px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
