--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,8 @@ p {
 	width: 100%;
 	height: 189px;
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
+	-webkit-transition: background-color 0.25s;
+	list-style: none;
 }
 
 .programLabel {
@@ -223,6 +225,7 @@ p {
 }
 
 .programTitle.active {
+	color: red;
 	border-bottom-style: none;
 }
 
