--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@
 	border-right-width: 1px;
 	border-right-color: #7f7f7f;
 	z-index: 10;
-	-webkit-transition: left 1s;
+	-webkit-transition: left 0.5s;
 }
 
 .contentView.active {
@@ -79,33 +79,43 @@ img {
 ------------------------------------------ */
 
 @font-face {
-  font-family: 'Univers';
+  font-family: 'UniversLTStd';
   src: url('../font/UniversLTStd.otf') format('opentype');
 }
 
+@font-face {
+  font-family: 'UniversLTStd-Bold';
+  src: url('../font/UniversLTStd-Bold.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'UniversLTStd-Light';
+  src: url('../font/UniversLTStd-Light.otf') format('opentype');
+}
+
 h1 {
-	font-family: 'Univers';
+	font-family: 'UniversLTStd';
+	font-weight: normal;
 	font-size: 35px;
-	font-weight: 500;
 }
 
 h2 {
-	font-family: 'Univers';
+	font-family: 'UniversLTStd-Bold';
 	font-size: 35px;
-	font-weight: 700;
+	font-weight: normal;
 	line-height: 50px;
 	margin-bottom: 60px;
 }
 
 p {
-	font-family: 'Univers';
+	font-family: 'UniversLTStd';
 	font-size: 35px;
-	font-weight: 300;
+	font-weight: normal;
 	line-height: 50px;
 }
 
 .bold {
-	font-weight: 900;
+	font-family: 'UniversLTStd-Bold';
 }
 
 .horiCenter {
@@ -157,7 +167,10 @@ p {
 	width: 100%;
 	left: -784px;
 	background-color: #fff;
-	-webkit-transition: left 1s;
+	border-right-style: solid;
+	border-right-width: 1px;
+	border-right-color: #7f7f7f;
+	-webkit-transition: left 0.5s;
 }
 
 .servicesContent {
@@ -166,7 +179,7 @@ p {
 	width: 100%;
 	left: 784px;
 	background-color: #fff;
-	-webkit-transition: left 1s;
+	-webkit-transition: left 0.5s;
 }
 
 .programsContent.active {
@@ -214,7 +227,7 @@ p {
 /* cells */
 
 .programCell {
-	width: 100%;
+	/*width: 100%;*/
 	height: 189px;
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	list-style: none;
@@ -251,7 +264,7 @@ p {
 }
 
 .programTitle {
-	width: 605px;
+	width: 604px;
 	height: 100%;
 	float: left;
 	border-bottom-style: solid;
