--- a/css/style.css
+++ b/css/style.css
@@ -263,6 +263,11 @@ p {
 	background-image: url(../img/icons/info.svg);
 }
 
+#routeIcon {
+	background-image: url(../img/icons/route.svg);
+}
+
+
 .programTitle {
 	width: 604px;
 	height: 100%;
@@ -365,6 +370,96 @@ p {
 	opacity: 0.5;
 	position: absolute;
 }
+
+/* ------------------------------------------
+-- POPUP ------------------------------------
+------------------------------------------ */
+
+.popUp {
+	width: 700px;
+	height: 379px;
+	background-color: rgba(255,255,255,0.95);
+	border-style: solid;
+	border-width: 1px;
+	border-color: #7f7f7f;
+	position: absolute;
+}
+
+.popUpTitle {
+	width: 100%;
+	height: 130px;
+	position: absolute;
+}
+
+.popUpInfoButton {
+	width: 100%;
+	height: 130px;
+	margin-top: 126px;
+	position: absolute;
+}
+
+.popUpRouteButton {
+	width: 100%;
+	height: 130px;
+	margin-top: 252px;
+	position: absolute;
+}
+
+.popUpVertCenter {
+	margin-top: 50px;
+	margin-left: 50px;
+}
+
+.popUpFullTitle {
+	margin-left: 120px;
+	padding-bottom: 40px;
+}
+
+.popUpUnderline {
+	border-bottom-style: solid;
+	border-bottom-width: 1px;
+	border-bottom-color: #7f7f7f;
+}
+
+.popUpIcon {
+	width: 50px;
+	height: 50px;
+	margin-top: 40px;
+	margin-left: 40px;
+	float: left;
+	background-size: 100%;
+}
+
+.popUpLine {
+	width: 2px;
+	height: 100px;
+	top: 100%;
+	left: 350px;
+	margin-left: -1px;
+	position: relative;
+	background-color: #7f7f7f
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
