--- a/www/css/style.css
+++ b/www/css/style.css
@@ -61,18 +61,34 @@ img {
 -- KARTE ALSO MAP ---------------------------
 ------------------------------------------ */
 
-#mapElement {
+.mapElement {
 	width: 1012px;
 	height: 860px;
-	top:250px;
+	top:-1000px;
 	left:900px;
 	position: fixed;
 	/*-webkit-transition: -webkit-transform 0.2s;
 	-webkit-transition: -webkit-transform-origin 0.2s;*/
 	background-repeat: no-repeat;
-	background-image: url(../img/maps/map_0.svg);
 	background-size: contain;
 }
+
+.mapElement.active {
+	top: 250px; 
+}
+
+#floor1 {
+	background-image: url(../img/maps/train_map_0.svg);
+}
+
+#floor2 {
+	background-image: url(../img/maps/map_1.svg);
+}
+
+#floor3 {
+	background-image: url(../img/maps/map_2.svg);
+}
+
 
 /* ------------------------------------------
 -- TYPOGRAPHY -------------------------------
@@ -293,7 +309,7 @@ p {
 .floatLeft {
 	float: left;
 }
-
+/*
 .chevron {
 	width: 100px;
 	height: 100px;
@@ -302,7 +318,7 @@ p {
 	margin-top: 40px;
 	display: none;
 }
-
+*/
 /* ------------------------------------------
 -- CONTENT-VIEW -----------------------------
 ------------------------------------------ */
@@ -366,8 +382,8 @@ p {
 ------------------------------------------ */
 
 .room {
-	background-color: green;
-	opacity: 0.5;
+	background-color: #eee;
+	opacity: 1;
 	position: absolute;
 }
 
@@ -376,13 +392,13 @@ p {
 ------------------------------------------ */
 
 .popUp {
+	position: relative;
 	width: 700px;
 	height: 379px;
 	background-color: rgba(255,255,255,0.95);
 	border-style: solid;
 	border-width: 1px;
 	border-color: #7f7f7f;
-	position: absolute;
 }
 
 .popUpTitle {
